--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DawletKenesbaev</title>
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
@@ -20,9 +20,6 @@
               <li class="menu__item">
                 <a href="#Skills" class="menu__link">Skills</a>
               </li>
-              <!-- <li class="menu__item">
-                <a href="#Code" class="menu__link">Code</a>
-              </li> -->
               <li class="menu__item">
                 <a href="#Education" class="menu__link">Education</a>
               </li>
@@ -41,7 +38,7 @@
         <main class="content">
           <section class="content__personname personname">
             <h1 class="personname__textblock">
-              <span class="personname__light light">Katsiaryna Mys</span><span class="personname__dark dark">liuchyk</span>
+              <span class="personname__light light">Dawlet Ken</span><span class="personname__dark dark">esbaev</span>
             </h1>
           </section>
           <div class="content__block">
@@ -54,19 +51,14 @@
                   <h2 id="About" class="me__title title">About Me</h2>
                   <p class="me__subtitle subtitle">junior front-end developer</p>
                   <p class="me__light light">
-                    I want to change my job to a Frontend Developer. I study the
-                    relevant literature, take courses, master new technologies,
-                    improve the level of English. I believe that if you are in
-                    love with your work, your goal is achieved with great success.
+                     
+                      Front-end developer with a strong foundation in HTML,
+                       CSS, and JavaScript. Eager to apply my knowledge and
+                        learn new skills to contribute effectively to web 
+                        development projects. Committed to continuous
+                       improvement and adaptability.
                   </p>
-                  <p class="me__light light">
-                    Engineering education and BIM technology help in better
-                    understanding of the logic and process of creating code.
-                    Drawing and photography skills allow me to better understand
-                    the aesthetic component of the desired profession, to achieve
-                    contact with the user, harmoniously applying the existing
-                    experience with color, proportions and other tools.
-                  </p>
+                 
                   <p class="me__light light">
                     I will consider your offers and internship.
                   </p>
