--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
                     I will consider your offers and internship.
                   </p>
                   <blockquote>
-                    My path is based on the principle: the accumulation of new
-                    knowledge to the existing experience will help me in the
-                    desired profession.
+                   
                   </blockquote>
                 </div>
               </section>
@@ -73,31 +71,31 @@
                 <div class="contact__block">
                   <div class="contact__link light">
                     <img src="img/mail.png" alt="E-mail">
-                    myslivchik382@gmail.com
+                    devdawlet@gmail.com
                   </div>
                 </div>
                 <div class="contact__block">
                   <div class="contact__link light">
-                    <a href="https://github.com/KaterinaMysl"><img src="img/github.png" alt="GitHub"> KaterinaMysl</a>
+                    <a href="https://github.com/NUKUS777"><img src="img/github.png" alt="GitHub"> NUKUS777</a>
                   </div>
                 </div>
                 <div class="contact__block">
                   <div class="contact__link light">
-                    <a href="https://t.me/Katerina_382">
-                      <img src="img/telegram.png" alt="Telegram"> Katerina_382
+                    <a href="https://t.me/dawletkenesbaev">
+                      <img src="img/telegram.png" alt="Telegram"> @dawletkenesbaev
                     </a>
                   </div>
                 </div>
                 <div class="contact__block">
                   <div class="contact__link light">
-                    <a href="https://www.linkedin.com/in/katsiaryna-m-89393a248/"><img src="img/linkedin.png" alt="LinkedIn"> Katsiaryna
-                      Mysliuchyk</a>
+                    <a href=""><img src="img/linkedin.png" alt="LinkedIn"> Dawlet Kenesbaev
+                    </a>
                   </div>
                 </div>
                 <div class="contact__block">
                   <div class="contact__link light">
                     <img src="img/discord.png" alt="Discord">
-                    _katerinam
+                     hhhhh
                   </div>
                 </div>
               </div>
