--- a/index.html
+++ b/index.html
@@ -408,23 +408,6 @@
                   </div>
                 </div>
               </section>
-              <!-- <section id="Code" class="content__code code">
-                <div class="code__info info">
-                  <h2 class="code__title title">Code examples</h2>
-                </div>
-                <div class="code__name">
-                  Task: Complete the solution so that it returns true if the first
-                  argument(string) passed in ends with the 2nd argument (also a
-                  string).
-                </div>
-                <div class="code__text">
-                  <code>
-  function solution(str, ending) { if
-  ((str.slice(-ending.length) === ending) || (ending == '')) {
-  return true; } return false; }
-                  </code>
-                </div>
-              </section> -->
             </div>
           </div>
         </main>
@@ -432,12 +415,12 @@
           <div class="footer__box">
             <div class="footer__row light">
               <div class="footer__language">
-                <div class="footer__name">Russian:</div>
+                <div class="footer__name">Uzbek:</div>
                 <div class="footer__point">native speaker</div>
               </div>
               <div class="footer__language">
                 <div class="footer__name">English:</div>
-                <div class="footer__point">B1</div>
+                <div class="footer__point">B2</div>
               </div>
             </div>
           </div>
