--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="content__column1">
               <section class="content__me me">
                 <div class="me__photo">
-                  <img src="img/IMG.jpg" alt="photo">
+                  <img src="./images/me.png" alt="photo">
                 </div>
                 <div class="me__info info">
                   <h2 id="About" class="me__title title">About Me</h2>
