--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <section class="content__me me">
                 <div class="me__photo">
                   <img src="./images/me.png" alt="photo">
-                </div>
+                </div>  
                 <div class="me__info info">
                   <h2 id="About" class="me__title title">About Me</h2>
                   <p class="me__subtitle subtitle">junior front-end developer</p>
@@ -114,35 +114,11 @@
                         </h3>
                         <ul>
                           <li class="education__bolt-title">
-                            Belarusian National Technical University (2014-2019)
-                            <ul>
-                              <li class="education__dark dark">
-                                Industrial and Civil Engineering <br>
-                                Civil-engineer
-                              </li>
-                            </ul>
+                            International Digital University (2022-2026)
+
                           </li>
-                          <li class="education__medium-title medium-title medium">
-                            RS Schools Course:
-                            <ul>
-                              <li class="education__dark dark">
-                                <a href="https://rs.school/js-stage0/">JavaScript/Front-end. Stage 0 (without
-                                  registration and rating) (02.2023-03.2023)</a>
-                              </li>
-                              <li class="education__dark dark">
-                                <a href="https://rs.school/js/">JavaScript/Front-end. Stage 1 (03.2023-05.2023)
-                                </a>
-                              </li>
-                              <li class="education__dark dark">
-                                <a href="https://rs.school/js/">JavaScript/Front-end. Stage 2
-                                  (05.2023-09.2023) <span class="top-list">In the top 25 best students</span> 
-                                </a>
-                              </li>
-                              <li class="education__dark dark">
-                                <a href="https://rs.school/react/">React. Stage 3 (in progress)
-                                  (10.2023-01.2024)</a>
-                              </li>
-                            </ul>
+                          <li class="education__dark dark">
+                            Data Science
                           </li>
                         </ul>
                       </div>
@@ -151,28 +127,46 @@
                           Courses:
                         </h3>
                         <ul>
-                          <li class="education__medium-title medium-title medium">
-                            Online school platforms:
-                            <ul>
-                              <li class="education__dark dark">
-                                <a href="https://stepik.org/catalog">Stepik-ОСНОВЫ Html &amp; CSS (11.2022)</a>
-                              </li>
-                            </ul>
+                          <li class="education__bolt-title">
+                            Najot Talim (2022-2023)
                           </li>
-                          <li class="education__medium-title medium-title medium">
-                            Online course on Youtube:
-                            <ul>
-                              <li class="education__dark dark">
-                                <a href="https://www.youtube.com/c/FreelancerLifeStyle?app=desktop">
-                                  Yevhen Andrikanych Freelancer LifeStyle
-                                  (01.2023-03.2023)</a>
-                              </li>
-                              <li class="education__dark dark">
-                                <a href="https://www.youtube.com/@YauhenKavalchuk/featured">
-                                  Yauhen Kavalchuk WebDev (04.2023)
-                                </a>
-                              </li>
-                            </ul>
+                          <li class="education__dark dark">
+                             Standard Web Development
+                          </li>
+                        </ul>
+                        <ul>
+                          <li class="education__bolt-title">
+                            RS School 
+                          </li>
+                          <li class="education__dark dark">
+                            <a href="https://rs.school/react/" target="_blank">
+                              ReactJS Stage 3 (in progress) (10.2023-01.2024)
+                            </a>
+                          </li>
+                        </ul>
+                      </div>
+                      <div class="education__courses">
+                        <h3 class="education__medium-title medium-title medium">
+                          Online Courses:
+                        </h3>
+                        <ul>
+                          <li class="education__bolt-title">
+                            Akshai Saini (Youtube)
+                          </li>
+                          <li class="education__dark dark">
+                            <a href="https://www.youtube.com/watch?v=pN6jk0uUrD8&list=PLlasXeu85E9cQ32gLCvAvr9vNaUccPVNP&pp=iAQB" target="_blank">
+                              Namaste JavaScript 🙏 Course
+                            </a>
+                          </li>
+                        </ul>
+                        <ul>
+                          <li class="education__bolt-title">
+                           JavaScript Info
+                          </li>
+                          <li class="education__dark dark">
+                             <a href="https://javascript.info/" target="_blank">
+                              The Modern JavaScript Tutorial
+                             </a>
                           </li>
                         </ul>
                       </div>
@@ -215,15 +209,15 @@
                   <h2 class="experience__title title">Experience</h2>
                   <div class="experience__work">
                     <h3 class="experience__name medium-title medium">
-                      Kj-Project
+                      Texnopos IT School
                     </h3>
                     <div class="experience__courses">
-                      Engineer-constructor (2019 - Present) 
+                      Assistant Math Teacher (2021 - 2022) 
                     </div>
                   </div>
                 </div>
               </section>
-              <section id="Projects" class="content__projects projects">
+              <!-- <section id="Projects" class="content__projects projects">
                 <div class="projects__info info">
                   <h2 class="projects__title title">Projects</h2>
                   <div class="projects__block">
@@ -407,7 +401,7 @@
                     </div>
                   </div>
                 </div>
-              </section>
+              </section> -->
             </div>
           </div>
         </main>
